challenge-2/jm-nginxdeployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jm-nginxdeployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
