challenge-2/jm-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jm-service
spec:
  type: ClusterIP
  selector:
    app: jm-nginxdeployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
