challenge-2/jm-nginxdeployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /hello
            backend:
              service:
                name: jm-service
                port:
                  number: 80
